Fixed contrast problem on email verification message

--- a/src/sass/routes/_welcome.scss
+++ b/src/sass/routes/_welcome.scss
@@ -67,6 +67,10 @@ $opaque-grey: rgba($gray-dark, .5);
       background-color: $brand-blue;
     }
 
+    &__email-verfication {
+      color: $white;
+    }
+
     &__container {
       padding: $space-lg $space-none;
     }
